<resources>
    <string name="app_name">SignUp</string>
    <string name="your_name">Your Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="facebook_account_link">Facebook Account Link</string>
    <string name="button">Button</string>
    <string name="your_current_address">Your Current Address</string>
    <string name="github_account_link">Github account link</string>
    <string name="sign_up">Sign Up</string>
    <string name="postal_address">Postal Address</string>
    <string name="github">Github</string>
    <string name="facebook_account">Facebook Account</string>
    <string name="phone_numbers">Phone Number</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
</resources>