<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#C4737070"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fName"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/name"
            android:textColor="#212121"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/yourName"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:text=""
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mail"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:gravity="center_vertical"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/email"
            android:textColor="#212121"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/yourMail"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:gravity="center_vertical"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text=""
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/phone_numbers"
            android:textColor="#212121"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/yourPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text=""
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/facebookAccount"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/facebook_account"
            android:textColor="#212121"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/yourFacebook"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text=""
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/githubAccount"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/github"
            android:textColor="#212121"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/yourGithub"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text=""
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/postalAddress"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/postal_address"
            android:textColor="#212121"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/yourPostal"
            android:layout_width="0dp"
            android:gravity="center_vertical"
            android:layout_height="44dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text=""
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>